--- a/Employee_Database/.env
+++ b/Employee_Database/.env
@@ -4,7 +4,7 @@
 # @Last Modified by:   Kajol.Patira
 # @Last Modified time: 2021-01-20 23:04:10
 
-host=localhost
-user=root
-password=Aman@2202
-database=employee_database
+host="HOST"
+user="USER_NAME"
+password="PASSWORD"
+database="DATABASE_NAME
